未完成点击

--- a/Coldplay/category.html
+++ b/Coldplay/category.html
@@ -39,8 +39,8 @@
                                         ￥ 1212
                                     </span>
                                     <div class="txe-2">
-                                        <span class="xin">3</span>
-                                        <span class="xin2">3</span>
+                                        <span class="xin"><img src="../img/xin.png">3</span>
+                                        <span class="xin2"><img src="../img/xin.png">3</span>
                                     </div>
                                 </div>
                             </p>
@@ -59,8 +59,8 @@
                                         ￥ 512
                                     </span>
                                     <div class="txe-2">
-                                        <span class="xin xin3">3</span>
-                                        <span class="xin2">3</span>
+                                        <span class="xin"><img src="../img/xin.png">3</span>
+                                        <span class="xin2"><img src="../img/xin.png">3</span>
                                     </div>
                                 </div>
                             </p>
@@ -78,8 +78,8 @@
                                         ￥ 暂无
                                     </span>
                                     <div class="txe-2">
-                                        <span class="xin">3</span>
-                                        <span class="xin2">3</span>
+                                        <span class="xin"><img src="../img/xin.png">3</span>
+                                        <span class="xin2"><img src="../img/xin.png">3</span>
                                     </div>
                                 </div>
                             </p>
@@ -97,8 +97,8 @@
                                         ￥ 433
                                     </span>
                                     <div class="txe-2">
-                                        <span class="xin">3</span>
-                                        <span class="xin2">3</span>
+                                        <span class="xin"><img src="../img/xin.png">3</span>
+                                        <span class="xin2"><img src="../img/xin.png">3</span>
                                     </div>
                                 </div>
                             </p>
@@ -117,8 +117,8 @@
                                         ￥ 1212
                                     </span>
                                     <div class="txe-2">
-                                        <span class="xin">3</span>
-                                        <span class="xin2">3</span>
+                                        <span class="xin"><img src="../img/xin.png">3</span>
+                                        <span class="xin2"><img src="../img/xin.png">3</span>
                                     </div>
                                 </div>
                             </p>
@@ -137,8 +137,8 @@
                                         ￥ 512
                                     </span>
                                     <div class="txe-2">
-                                        <span class="xin">3</span>
-                                        <span class="xin2">3</span>
+                                        <span class="xin"><img src="../img/xin.png">3</span>
+                                        <span class="xin2"><img src="../img/xin.png">3</span>
                                     </div>
                                 </div>
                             </p>
@@ -156,8 +156,8 @@
                                         ￥ 暂无
                                     </span>
                                     <div class="txe-2">
-                                        <span class="xin">3</span>
-                                        <span class="xin2">3</span>
+                                        <span class="xin"><img src="../img/xin.png">3</span>
+                                        <span class="xin2"><img src="../img/xin.png">3</span>
                                     </div>
                                 </div>
                             </p>
@@ -175,8 +175,8 @@
                                         ￥ 433
                                     </span>
                                     <div class="txe-2">
-                                        <span class="xin">3</span>
-                                        <span class="xin2">3</span>
+                                        <span class="xin"><img src="../img/xin.png">3</span>
+                                        <span class="xin2"><img src="../img/xin.png">3</span>
                                     </div>
                                 </div>
                             </p>
@@ -195,8 +195,8 @@
                                         ￥ 1212
                                     </span>
                                     <div class="txe-2">
-                                        <span class="xin">3</span>
-                                        <span class="xin2">3</span>
+                                        <span class="xin"><img src="../img/xin.png">3</span>
+                                        <span class="xin2"><img src="../img/xin.png">3</span>
                                     </div>
                                 </div>
                             </p>
@@ -215,8 +215,8 @@
                                         ￥ 512
                                     </span>
                                     <div class="txe-2">
-                                        <span class="xin">3</span>
-                                        <span class="xin2">3</span>
+                                        <span class="xin"><img src="../img/xin.png">3</span>
+                                        <span class="xin2"><img src="../img/xin.png">3</span>
                                     </div>
                                 </div>
                             </p>
@@ -234,8 +234,8 @@
                                         ￥ 暂无
                                     </span>
                                     <div class="txe-2">
-                                        <span class="xin">3</span>
-                                        <span class="xin2">3</span>
+                                        <span class="xin"><img src="../img/xin.png">3</span>
+                                        <span class="xin2"><img src="../img/xin.png">3</span>
                                     </div>
                                 </div>
                             </p>
@@ -253,8 +253,8 @@
                                         ￥ 433
                                     </span>
                                     <div class="txe-2">
-                                        <span class="xin">3</span>
-                                        <span class="xin2">3</span>
+                                        <span class="xin"><img src="../img/xin.png">3</span>
+                                        <span class="xin2"><img src="../img/xin.png">3</span>
                                     </div>
                                 </div>
                             </p>
@@ -273,8 +273,8 @@
                                         ￥ 1212
                                     </span>
                                     <div class="txe-2">
-                                        <span class="xin">3</span>
-                                        <span class="xin2">3</span>
+                                        <span class="xin"><img src="../img/xin.png">3</span>
+                                        <span class="xin2"><img src="../img/xin.png">3</span>
                                     </div>
                                 </div>
                             </p>
@@ -293,8 +293,8 @@
                                         ￥ 512
                                     </span>
                                     <div class="txe-2">
-                                        <span class="xin">3</span>
-                                        <span class="xin2">3</span>
+                                        <span class="xin"><img src="../img/xin.png">3</span>
+                                        <span class="xin2"><img src="../img/xin.png">3</span>
                                     </div>
                                 </div>
                             </p>
@@ -312,8 +312,8 @@
                                         ￥ 暂无
                                     </span>
                                     <div class="txe-2">
-                                        <span class="xin">3</span>
-                                        <span class="xin2">3</span>
+                                        <span class="xin"><img src="../img/xin.png">3</span>
+                                        <span class="xin2"><img src="../img/xin.png">3</span>
                                     </div>
                                 </div>
                             </p>
@@ -331,8 +331,8 @@
                                         ￥ 433
                                     </span>
                                     <div class="txe-2">
-                                        <span class="xin">3</span>
-                                        <span class="xin2">3</span>
+                                        <span class="xin"><img src="../img/xin.png">3</span>
+                                        <span class="xin2"><img src="../img/xin.png">3</span>
                                     </div>
                                 </div>
                             </p>
