--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             --swiper-navigation-size: 70px;
             /* 设置按钮大小 */
         }
+
+        /* .swiper-button-prev {}
+
+        .swiper-button-next {} */
     </style>
 </head>
 
@@ -42,7 +46,7 @@
         <div class="swiper-wrapper">
             <div class="swiper-slide">
                 <div class="img-lb-1">
-                    <a href="">
+                    <a href="./Coldplay/Coldplay-a.html">
                         <img src="./img/hot1.jpg" alt="">
                         <p>巴慕达 The Toaster 烤面包机</p>
                         <span>2023</span>
@@ -51,7 +55,7 @@
                         <p>剩余时间2天</p>
                         <span class="sf">首发</span>
                     </a>
-                    <a href="">
+                    <a href="./Coldplay/Coldplay-a.html">
                         <img src="./img/hot2.jpg" alt="">
                         <p>Osprey小鹰户外运动专业腰包</p>
                         <span class="sty-color">2023</span>
@@ -60,7 +64,7 @@
                         <p class="sty-color-1">查看试用名单</p>
                         <span class="tys">体验师专享</span>
                     </a>
-                    <a href="">
+                    <a href="./Coldplay/Coldplay-a.html">
                         <img src="./img/hot3.jpg" alt="">
                         <p>Liquid image 338 运动摄像眼睛</p>
                         <span>2023</span>
@@ -69,7 +73,7 @@
                         <p>剩余时间2天</p>
                         <span class="sf">首发</span>
                     </a>
-                    <a href="">
+                    <a href="./Coldplay/Coldplay-a.html">
                         <img src="./img/hot4.jpg" alt="">
                         <p>巴慕达 The Toaster 烤面包机</p>
                         <span>2023</span>
@@ -82,7 +86,7 @@
             </div>
             <div class="swiper-slide">
                 <div class="img-lb-2">
-                    <a href="">
+                    <a href="./Coldplay/Coldplay-a.html">
                         <img src="./img/hot5.jpg" alt="">
                         <p>巴慕达 The Toaster 烤面包机</p>
                         <span>2023</span>
@@ -91,7 +95,7 @@
                         <p>剩余时间2天</p>
                         <span class="sf">首发</span>
                     </a>
-                    <a href="">
+                    <a href="./Coldplay/Coldplay-a.html">
                         <img src="./img/hot6.jpg" alt="">
                         <p>Osprey小鹰户外运动专业腰包</p>
                         <span class="sty-color">2023</span>
@@ -100,7 +104,7 @@
                         <p class="sty-color-1">查看试用名单</p>
                         <span class="tys">体验师专享</span>
                     </a>
-                    <a href="">
+                    <a href="./Coldplay/Coldplay-a.html">
                         <img src="./img/hot7.jpg" alt="">
                         <p>Liquid image 338 运动摄像眼睛</p>
                         <span>2023</span>
@@ -109,7 +113,7 @@
                         <p>剩余时间2天</p>
                         <span class="sf">首发</span>
                     </a>
-                    <a href="">
+                    <a href="./Coldplay/Coldplay-a.html">
                         <img src="./img/hot8.jpg" alt="">
                         <p>巴慕达 The Toaster 烤面包机</p>
                         <span>2023</span>
@@ -122,7 +126,7 @@
             </div>
             <div class="swiper-slide">
                 <div class="img-lb-2">
-                    <a href="">
+                    <a href="./Coldplay/Coldplay-a.html">
                         <img src="./img/hot9.jpg" alt="">
                         <p>巴慕达 The Toaster 烤面包机</p>
                         <span>2023</span>
@@ -131,7 +135,7 @@
                         <p>剩余时间2天</p>
                         <span class="sf">首发</span>
                     </a>
-                    <a href="">
+                    <a href="./Coldplay/Coldplay-a.html">
                         <img src="./img/hot10.jpg" alt="">
                         <p>Osprey小鹰户外运动专业腰包</p>
                         <span class="sty-color">2023</span>
@@ -140,7 +144,7 @@
                         <p class="sty-color-1">查看试用名单</p>
                         <span class="tys">体验师专享</span>
                     </a>
-                    <a href="">
+                    <a href="./Coldplay/Coldplay-a.html">
                         <img src="./img/hot11.jpg" alt="">
                         <p>Liquid image 338 运动摄像眼睛</p>
                         <span>2023</span>
@@ -149,7 +153,7 @@
                         <p>剩余时间2天</p>
                         <span class="sf">首发</span>
                     </a>
-                    <a href="">
+                    <a href="./Coldplay/Coldplay-a.html">
                         <img src="./img/hot12.jpg" alt="">
                         <p>巴慕达 The Toaster 烤面包机</p>
                         <span>2023</span>
@@ -175,7 +179,7 @@
         </p>
         <ul>
             <li>
-                <a href="">
+                <a href="./report/report-a.html">
                     <img src="./img/k1.jpg" alt="">
                 </a>
                 <p>空气净化器里面学问多得惊呆你，你选对了吗？</p>
@@ -186,7 +190,7 @@
                 </p>
             </li>
             <li>
-                <a href="">
+                <a href="./report/report-a.html">
                     <img src="./img/re2.jpg" alt="">
                 </a>
                 <p>怎么骑都不会累的智能自行车：云马 C1试骑体验</p>
@@ -197,7 +201,7 @@
                 </p>
             </li>
             <li>
-                <a href="">
+                <a href="./report/report-a.html">
                     <img src="./img/re3.jpg" alt="">
                 </a>
                 <p>空气净化器里面学问多得惊呆你，你选对了吗？</p>
@@ -208,7 +212,7 @@
                 </p>
             </li>
             <li>
-                <a href="">
+                <a href="./report/report-a.html">
                     <img src="./img/re4.jpg" alt="">
                 </a>
                 <p>声音不是最优秀，但它形音完美的结合，足够打动人心</p>
@@ -220,7 +224,7 @@
 
             </li>
             <li>
-                <a href="">
+                <a href="./report/report-a.html">
                     <img src="./img/re3.jpg" alt="">
                 </a>
                 <p>风光大片信手拈来！vivo不只是快，还是一台拍照利器</p>
@@ -231,7 +235,7 @@
                 </p>
             </li>
             <li>
-                <a href="">
+                <a href="./report/report-a.html">
                     <img src="./img/re4.jpg" alt="">
                 </a>
                 <p>声音不是最优秀，但它形音完美的结合，足够打动人心</p>
@@ -242,7 +246,7 @@
                 </p>
             </li>
             <li>
-                <a href="">
+                <a href="./report/report-a.html">
                     <img src="./img/re2.jpg" alt="">
                 </a>
                 <p>空气净化器里面学问多得惊呆你，你选对了吗？</p>
@@ -253,7 +257,7 @@
                 </p>
             </li>
             <li>
-                <a href="">
+                <a href="./report/report-a.html">
                     <img src="./img/re1.jpg" alt="">
                 </a>
                 <p>风光大片信手拈来！vivo不只是快，还是一台拍照利器</p>
@@ -273,7 +277,7 @@
         </p>
         <ul>
             <li>
-                <a href="">
+                <a href="./report/report-a.html">
                     <img src="./img/g1.jpg" alt="">
                 </a>
                 <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
@@ -283,7 +287,7 @@
                 </p>
             </li>
             <li>
-                <a href="">
+                <a href="./report/report-a.html">
                     <img src="./img/g2.jpg" alt="">
                 </a>
                 <p>到底有没有完美的iPhone手机配件，答案都在这里</p>
@@ -293,7 +297,7 @@
                 </p>
             </li>
             <li>
-                <a href="">
+                <a href="./report/report-a.html">
                     <img src="./img/g3.jpg" alt="">
                 </a>
                 <p>2016，这8支钢笔够你装逼一整年</p>
@@ -303,7 +307,7 @@
                 </p>
             </li>
             <li>
-                <a href="">
+                <a href="./report/report-a.html">
                     <img src="./img/g4.jpg" alt="">
                 </a>
                 <p>他用12年找一把完美 剃须刀给你2万字终极购买指南</p>
@@ -322,7 +326,7 @@
         </p>
         <ul id="box-3-more">
             <li>
-                <a href="">
+                <a href="./Coldplay/Coldplay-a.html">
                     <img src="./img/k4.jpg" alt="">
                 </a>
                 <p>空气净化器里面学问多得惊呆你，你选对了吗？</p>
@@ -335,7 +339,7 @@
 
             </li>
             <li>
-                <a href="">
+                <a href="./Coldplay/Coldplay-a.html">
                     <img src="./img/k2.jpg" alt="">
                 </a>
                 <p>怎么骑都不会累的智能自行车</p>
@@ -348,7 +352,7 @@
 
             </li>
             <li>
-                <a href="">
+                <a href="./Coldplay/Coldplay-a.html">
                     <img src="./img/k3.jpg" alt="">
                 </a>
                 <p>空气净化器里面学问多得惊呆你，你选对了吗？</p>
@@ -360,7 +364,7 @@
                 </p>
             </li>
             <li>
-                <a href="">
+                <a href="./Coldplay/Coldplay-a.html">
                     <img src="./img/k4.jpg" alt="">
                 </a>
                 <p>声音不是最优秀，但它形音完美的结合，足够打动人心</p>
@@ -372,7 +376,7 @@
                 </p>
             </li>
             <li>
-                <a href="">
+                <a href="./Coldplay/Coldplay-a.html">
                     <img src="./img/k2.jpg" alt="">
                 </a>
                 <p>风光大片信手拈来！vivo不只是快，还是一台拍照利器</p>
@@ -384,7 +388,7 @@
                 </p>
             </li>
             <li>
-                <a href="">
+                <a href="./Coldplay/Coldplay-a.html">
                     <img src="./img/re4.jpg" alt="">
                 </a>
                 <p>声音不是最优秀，但它形音完美的结合，足够打动人心</p>
@@ -396,7 +400,7 @@
                 </p>
             </li>
             <li>
-                <a href="">
+                <a href="./Coldplay/Coldplay-a.html">
                     <img src="./img/re2.jpg" alt="">
                 </a>
                 <p>空气净化器里面学问多得惊呆你，你选对了吗？</p>
@@ -409,7 +413,7 @@
 
             </li>
             <li>
-                <a href="">
+                <a href="./Coldplay/Coldplay-a.html">
                     <img src="./img/re1.jpg" alt="">
                 </a>
                 <p>风光大片信手拈来！vivo不只是快，还是一台拍照利器</p>
@@ -422,7 +426,7 @@
 
             </li>
             <li>
-                <a href="">
+                <a href="./Coldplay/Coldplay-a.html">
                     <img src="./img/k4.jpg" alt="">
                 </a>
                 <p>空气净化器里面学问多得惊呆你，你选对了吗？</p>
@@ -434,7 +438,7 @@
                 </p>
             </li>
             <li>
-                <a href="">
+                <a href="./Coldplay/Coldplay-a.html">
                     <img src="./img/k2.jpg" alt="">
                 </a>
                 <p>怎么骑都不会累的智能自行车：云马 C1试骑体验</p>
@@ -446,7 +450,7 @@
                 </p>
             </li>
             <li>
-                <a href="">
+                <a href="./Coldplay/Coldplay-a.html">
                     <img src="./img/k3.jpg" alt="">
                 </a>
                 <p>空气净化器里面学问多得惊呆你，你选对了吗？</p>
@@ -459,7 +463,7 @@
 
             </li>
             <li>
-                <a href="">
+                <a href="./Coldplay/Coldplay-a.html">
                     <img src="./img/k4.jpg" alt="">
                 </a>
                 <p>声音不是最优秀，但它形音完美的结合，足够打动人心</p>
@@ -472,7 +476,7 @@
 
             </li>
             <li>
-                <a href="">
+                <a href="./Coldplay/Coldplay-a.html">
                     <img src="./img/k2.jpg" alt="">
                 </a>
                 <p>风光大片信手拈来！vivo不只是快，还是一台拍照利器</p>
@@ -485,7 +489,7 @@
 
             </li>
             <li>
-                <a href="">
+                <a href="./Coldplay/Coldplay-a.html">
                     <img src="./img/re4.jpg" alt="">
                 </a>
                 <p>声音不是最优秀，但它形音完美的结合，足够打动人心</p>
@@ -498,7 +502,7 @@
 
             </li>
             <li>
-                <a href="">
+                <a href="./Coldplay/Coldplay-a.html">
                     <img src="./img/re2.jpg" alt="">
                 </a>
                 <p>空气净化器里面学问多得惊呆你，你选对了吗？</p>
@@ -511,7 +515,7 @@
 
             </li>
             <li>
-                <a href="">
+                <a href="./Coldplay/Coldplay-a.html">
                     <img src="./img/re1.jpg" alt="">
                 </a>
                 <p>风光大片信手拈来！vivo不只是快，还是一台拍照利器</p>
@@ -542,17 +546,29 @@
     var mySwiper = new Swiper('.swiper', {
         direction: 'horizontal', // 垂直切换选项
         loop: true, // 循环模式选项
+        autoplay: true,//等同于以下设置
+        autoplay: {
+            delay: 3000,
+            // stopOnLastSlide: false,
+            pauseOnMouseEnter: true,//鼠标以上停止切换
+            disableOnInteraction: false,//操作轮播图之后还能自动切换
+        },
+        // 如果需要分页器
+        pagination: {
+            el: '.swiper-pagination',
+            clickable: true,
+        },
+
+
         // 如果需要前进后退按钮
         navigation: {
             nextEl: '.swiper-button-next',
             prevEl: '.swiper-button-prev',
         },
-        autoplay: {
-            delay: 2000,
-            stopOnLastSlide: false,
-            disableOnInteraction: true,
+
+        // 如果需要滚动条
+        scrollbar: {
+            el: '.swiper-scrollbar',
         },
-
-
-    })        
+    })
 </script>
