--- a/register.html
+++ b/register.html
@@ -15,7 +15,7 @@
     <iframe src="./top.html" id="ifname-1" frameborder="0"></iframe>
     <div class="register-box">
         <!-- 标题 -->
-        <p>注册极果</p>
+        <p><a href="./login.html">登录极果</a></p>
         <!-- 版心 -->
         <div>
             <input type="text" id="phone" placeholder="请登录手机号"><span class="h-span"></span>
