--- a/login.html
+++ b/login.html
@@ -15,13 +15,17 @@
     <iframe src="./top.html" id="ifname-1" frameborder="0"></iframe>
     <div class="login-box">
         <!-- 标题 -->
-        <p>登录极果</p>
+        <p><a href="./register.html">注册极果</a></p>
         <!-- 版心 -->
         <div>
             <input type="text" id="phone" placeholder="请登录手机号">
             <span class="h-span"></span>
             <input type="password" id="pass" placeholder="请输新密码">
-            <span class="h-span"></span>
+            <span class="h-span"></span><br>
+            <input id="jzma" type="checkbox">
+            <label for="jzma">记住密码</label>
+            <a id="wjma" href="">忘记密码？</a>
+            <br>
             <button id="zc">立即登录</button>
         </div>
     </div>
